update content and media queries

--- a/firebasejs/index.html
+++ b/firebasejs/index.html
@@ -9,5 +9,86 @@
 </head>
 <body>
 	
+	
+		<div class="flex-nav">	
+			<div class="flex-title">
+				<h1>firebase.js</h1>
+				<div class="flex-star">
+					<img class="star" src="../firebasejs/images/svg/star-solid.svg" alt="image_of_a_star"> 
+					<p>1,234 stars</p>
+				</div>
+			</div>
+		<div class="navContainer" >
+			<nav>
+				<div class="flex-icons">
+					<ul>
+						<li><a href=""> About</a></li>
+						<li><a href="">Documentation</a></li>
+						<li><a href="">Support</a></li>
+					</ul>
+				
+					<div class="svgdiv">
+						<a href="https://github.com/" target="_blank"><img class="svgimage" src="../firebasejs/images/svg/github-brands.svg" alt="git_hub_logo"></a>
+						<a href="https://twitter.com/explore" target="_blank"><img class="svgimage" src="../firebasejs/images/svg/twitter-brands.svg" alt="twitter logo"></a>
+						<button type="submit">Download</button>
+					</div>
+				</div>
+			</nav>	
+		</div><!-- flex-nav -->
+	</div>	
+<header>
+	<div class="flex-image">
+	<div class="flex-content">
+		<h1>firebase.js</h1>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam officia adipisci odit, tenetur dolores nesciunt impedit sit earum nihil. Tenetur nesciunt laboriosam reiciendis odio sunt aut culpa perspiciatis possimus quod?</p>
+		<button type="submit">Download</button>
+	</div>
+
+	<img class="firelogopic"  src="../firebasejs/images/firebase-logo.png" alt="image-of-burning-firewood">
+	</div>		
+</header>
+
+
+	<!-- <main> -->
+		<div class="main-content">
+			<div class="title" >
+				<h1>WHAT <span>FIREBASEJS</span> OFFERS</h1>
+			</div>
+
+			<div class="container " >
+				<div class="section">
+					<h3>Fast and Reliable</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique sit earum esse tempore corporis debitis at, minus dicta repellat expedita laboriosam a quam aut rem in nostrum illo cumque.</p>
+				</div>
+
+				<div class="section ">
+					<h3>Secure</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique sit earum esse tempore corporis debitis at, minus dicta repellat expedita laboriosam a quam aut rem in nostrum illo cumque.</p>
+				</div>
+				
+				<div class="section ">
+					<h3>Easy To Use</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique sit earum esse tempore corporis debitis at, minus dicta repellat expedita laboriosam a quam aut rem in nostrum illo cumque.</p>
+				</div>
+
+				<div class="section">
+					<h3>Fully Customizable</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique sit earum esse tempore corporis debitis at, minus dicta repellat expedita laboriosam a quam aut rem in nostrum illo cumque.</p>
+				</div>
+
+				<div class="section">
+					<h3>Open Source</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique sit earum esse tempore corporis debitis at, minus dicta repellat expedita laboriosam a quam aut rem in nostrum illo cumque.</p>
+				</div>
+
+				<div class="section">
+					<h3>Integration</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique sit earum esse tempore corporis debitis at, minus dicta repellat expedita laboriosam a quam aut rem in nostrum illo cumque.</p>
+				</div>
+			
+			</div><!-- container -->
+		</div>
+	<!-- </main> -->
+
 </body>
 </html>
